external-crates/move/crates/move-compiler/tests/move_check/parser/struct_field_missing_type.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/struct_field_missing_type.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_field_missing_type.move:2:18
  │
2 │     struct S { f } // Each field must specify a type
  │                  ^
  │                  │
  │                  Unexpected '}'
  │                  Expected ':'

